grammar.txt
statement      → expression | varDeclaration | assignement ;
varDeclaration → VAR IDENTIFIER ;
assignement    → IDENTIFIER EQUAL expression
expression     →  term
term           → factor ( ( "-" | "+" ) factor )* ;
factor         → unary ( ( "/" | "*" ) unary )* ;
unary          → "-" unary
               | primary ;
primary        → NUMBER
               | "(" expression ")" 
               | IDENTIFIER

VAR = "var"
NUMBER = [0-9]+(\.[0-9]+)?
IDENTIFIER = "(_ | [a-zA-Z])+"
EQUAL = "="
